--- a/package.json
+++ b/package.json
@@ -118,5 +118,8 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.12.0",
     "typescript": "^3.4.4"
+  },
+  "dependencies": {
+    "exec-root": "^1.0.4"
   }
 }
