--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,11 @@ node_js:
   - '11'
   - '8'
 script:
-  - npm run test:prod && npm run build
+  - npm install && sudo npm run test:prod && sudo npm run build
+before_install: 
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install nodejs; fi
 after_success:
   - npm run travis-deploy-once "npm run report-coverage"
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run travis-deploy-once "npm run deploy-docs"; fi
