--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ os:
   - windows
 node_js:
   - '8'
-env: - YARN_GPG=no
+env: 
+  - YARN_GPG=no
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" || "$TRAVIS_OS_NAME" == "osx" ]]; then npm install && sudo npm run test:prod && sudo npm run build; fi
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then npm install && npm run test:prod && npm run build; fi
