--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install nodejs; fi
 
+matrix:
+  exclude:
+    - os: windows
+      env: GH_TOKEN=$GH_TOKEN
+
 jobs:
   include:
     - stage: release
