--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edit-dns",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "0-dependancy TS library to load, save and recover DNS files",
   "keywords": [
     "dns",
@@ -13,7 +13,7 @@
     "load",
     "read"
   ],
-  "main": "dist/edit-dns.umd.js",
+  "main": "dist/edit-dns.cjs",
   "module": "dist/edit-dns.es5.js",
   "typings": "dist/types/edit-dns.d.ts",
   "files": [
@@ -106,7 +106,7 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup-plugin-typescript2": "^0.20.1",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "ts-jest": "^23.10.2",
