--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,14 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install nodejs; fi
-  
+
 jobs:
   include:
     - stage: release
       script:
         - npm run report-coverage
         - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run deploy-docs; fi
+        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run semantic-release; fi
 
 branches:
   except:
